feat: settings prepared for editing mapping

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,6 +1,14 @@
 {
     "sheet-export": {
       "settings": {
+        "mappingOption":{
+          "Name": "Mappings version-release",
+          "Hint": "Choose the export sheet version and release"
+        },
+        "mappingEdit":{
+          "Name": "Edit internal mapping",
+          "Hint": "Edit the internal mapping files of the version-release chosen above"
+        },
         "mapping": {
           "Name": "Mapping",
           "Hint": "JSON which is used to map the PDF fields to information on the Foundry character sheet. See the README for details."
