--- a/languages/en.json
+++ b/languages/en.json
@@ -6,8 +6,8 @@
         "Hint": "Choose the export sheet version and release"
       },
       "mappingEdit": {
-        "Name": "Edit internal mapping",
-        "Hint": "Edit the internal mapping files of the version-release chosen above"
+        "Name": "Generate mapping",
+        "Hint": "Generate the mapping files of the version-release chosen below"
       },
       "setCustomMapping": {
         "Name": "Set custom mapping",
@@ -15,25 +15,25 @@
       },
       "mapping": {
         "Name": "Mapping",
-        "Hint": "JSON which is used to map the PDF fields to information on the Foundry character sheet. See the README for details."
+        "Hint": "JS file which is used to map the PDF fields to information on the Foundry character sheet. See the README for details."
       },
       "mapping-npc": {
         "Name": "Mapping NPC",
-        "Hint": "JSON which is used to map the PDF fields to information on the Foundry NPC sheet. See the README for details."
+        "Hint": "JS file which is used to map the PDF fields to information on the Foundry NPC sheet. See the README for details."
       }
     },
     "sheet": {
       "override": "Override mapping's PDF"
     },
     "mappingEdit": {
-      "upload": "Generate mapping from PDF",
+      "upload": "Generate mapping for PC from PDF",
       "PC": "PC",
       "NPC": "NPC"
     },
     "customMapping": {
-      "upload-player-json": "Add player.json mapping file",
+      "upload-player-js": "Add player.js mapping file",
       "upload-player-pdf": "Add player PDF file",
-      "upload-npc-json": "Add npc.json mapping file",
+      "upload-npc-js": "Add npc.js mapping file",
       "upload-npc-pdf": "Add npc PDF file"
     },
     "download": {
