feat: menu lang

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,8 @@
 {
   "sheet-export": {
+    "menu":{
+      "label": "Sheet Export"
+    },
     "settings": {
       "mappingOption": {
         "Name": "Mappings version-release",
